2017-11-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Recovery/Planner.pm: Undo previous patch
	* perl/Amanda/Taper/Worker.pm: Return errorif plan is empty

2017-11-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Recovery/Planner.pm (make_plan): Return an error if the
	  dump is not found
	* perl/Amanda/Taper/Worker.pm: Fail if error is set
	* perl/Amanda/Status.pm: Fix for vaulting error

2017-11-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: Set storage and pool
	* perl/Amanda/Report/human.pm: Print timestamp and vault storage
	* installcheck/catalogs/tapers.cat: Fix check

2017-11-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/progs.m4: AC_DEFINE_UNQUOTED(LPR)
	* common-src/genversion.c: s/LPRCMD/LPR/, use DEFAULT_MAILER

2017-11-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/PgSQL.pm: Do not fail if 'DROP TABLE' fail

2017-11-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c (sec_tcp_conn_get): Do not reuse a
	  connection if it is in error

2017-11-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/log.pm: Read onlydriver that use the log
	  file
	* perl/Amanda/DB/Catalog2.pm: Load Amanda::Catalog2::log if no drvier
	  specified

2017-11-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2.pm: Fix to handle MySQL and PgSQl driver
	* perl/Amanda/DB/Catalog2/SQL.pm: Get all SQL code
	* perl/Amanda/DB/Catalog2/SQLite.pm: Moved most of the code to SQL.pm
	* perl/Amanda/DB/Catalog2/MySQL.pm: New MySQL driver
	* perl/Amanda/DB/Catalog2/PgSQL.pm: New PgSQL drvier
	* man/xml-source/amanda-catalog.7.xml: Document them

2017-11-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/holding.c (holding_file_size_bytes): New function to
	  return the size in vytes of a holding disk dump
	* server-src/holding.c: s/399/DUMP_LEVELS/